--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -75,6 +75,9 @@ buypro.description=PowerFolder Pro jetzt kaufen
 buypro.key=K
 buypro.name=Pro kaufen
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
 chatpanel.chat_with=Chat mit
 chatpanel.member_connected_at_time={0} verbunden um {1}
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
 folderpanel.hometab.number_of_available_files_at_other_members=Verf\u00fcgbare Dateien bei anderen Mitgliedern
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Anzahl der gel\u00f6schen 
 folderpanel.hometab.number_of_local_files_in_folder=Anzahl der lokalen Datein 
 folderpanel.hometab.public_folder=\u00d6ffentlich
 folderpanel.hometab.secret_folder=Geheim
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=Synchronisation fertig in
 folderpanel.hometab.synchronisation_percentage=Synchronisation
 folderpanel.hometab.title=Info
@@ -342,15 +347,12 @@ folderrepository.warnonclose.title=Wirklich Beenden?
 freelimitdialog.buypro=PowerFolder Pro kaufen
 freelimitdialog.buyrecommendation=Es is notwendig auf PowerFolder Pro umzusteigen oder die Nutzung zu verringern.
 freelimitdialog.buyrecommendation2=PowerFolder ist solange deaktiviert.
-freelimitdialog.buyrecommendation3=Helfen Sie uns durch den Kauf von PowerFolder Pro!
+freelimitdialog.buyrecommendation3=Helfen Sie uns durch den Kauf von PowerFolder Pro\!
 freelimitdialog.heavyusagedetected=PowerFolder hat erkannt, da\u00df Sie das Programm intensiv nutzen.
-freelimitdialog.reduce=Nutzung verringern
 freelimitdialog.reason=Grund\: Es sind mehr als {0} Folder oder {0} GB daten eingerichtet.
+freelimitdialog.reduce=Nutzung verringern
 freelimitdialog.title=Intensive Nutzung erkannt
 freelimitdialog.whatispro=Warum sollte ich PowerFolder Pro kaufen?
-
-onlinelabel.disabled=Deaktiviert (Intensive Nutzung erkannt)
-onlinelabel.disabled.text=PowerFolder arbeitet derzeit nicht, da eine intensive Nutzung des Programms erkannt wurde.
 
 friendsearch.no_user_found=Keine Benutzer gefunden
 friendsearch.nodetable.hostname=Hostname
@@ -364,6 +366,7 @@ friendspanel.currently_online=Zurzeit online
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Nach einem Benutzer suchen
 friendspanel.search_results=Suchergebnisse
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 ##general.apply=Apply
 general.availability=Verf\u00fcgbarkeit
@@ -531,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Kann zu keiner Quelle verbind
 
 onlinelabel.connecting=Verbinden
 onlinelabel.connecting.text=Sie sind online, aber nur zu wenigen Benutzern verbunden. Bitte warten Sie eine kurze Zeit um vollst\u00e4ndig verbunden zu sein. Falls dies nicht geschieht, lesen Sie die FAQ unter @ http\://www.powerfolder.com
+onlinelabel.disabled=Deaktiviert (Intensive Nutzung erkannt)
+onlinelabel.disabled.text=PowerFolder arbeitet derzeit nicht, da eine intensive Nutzung des Programms erkannt wurde.
 onlinelabel.offline=Offline
 onlinelabel.offline.text=Sie sind offline und mit keinem PowerFolder Benutzer verbunden
 onlinelabel.online=Online
@@ -577,6 +582,7 @@ preferences.dialog.bind.tooltip=W\u00e4hlt das Netwerkinterface aus, die PowerFo
 preferences.dialog.bindDescr=Beschreibung
 preferences.dialog.colortheme=PowerFolder Thema
 preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht. 
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialoge
@@ -646,6 +652,7 @@ preferences.dialog.titleProcessing=Arbeite...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=ZIP Kompression im LAN verwenden 
 preferences.dialog.useziponlan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=Warnung
 preferences.dialog.xbehavior=Beim Schlie\u00dfen von PowerFolder
 preferences.dialog.xbehavior.exit=Programm beenden
@@ -830,6 +837,7 @@ syncprofile.leecher.name=Torrent Downloader
 syncprofile.leechreleaser.name=Torrent Releaser
 syncprofile.manualdownload.name=Manueller Download
 syncprofile.projectwork.name=Projektarbeit
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=Beenden
 systray.hide=Verstecken
@@ -853,6 +861,7 @@ title.search.users=Benutzer suchen
 transfers.completed=vollst\u00e4ndig
 transfers.eta=verbleibend
 transfers.from=Von
+transfers.hashing=Berechne Hashes
 transfers.kbs={0} KB/s
 transfers.local=lokal
 transfers.pending=Ausstehend
@@ -908,6 +917,7 @@ wizard.projectsync.successjoin=Sie sind dem Projekt erfolgreich beigetreten\!
 wizard.projectsync.takepartsync=An einer Projektsynchronisation teilnehmen
 wizard.projectsync.title=Projekt Synchronisation
 ##wizard.sendinvitations.additionaltext=Additional Information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
 wizard.sendinvitations.offline=Nicht verbunden
 wizard.sendinvitations.overpf=\u00dcber PowerFolder versenden
@@ -923,8 +933,14 @@ wizard.setupdns.improvesread=<html>Eine (dynamische) Internetadresse (Dynamic DN
 wizard.setupdns.nodnssetup=<html>Sie haben bis jetzt noch keine (dynamische) Internetadresse<br>(Dynamic DNS) angegeben\!</html>
 wizard.setupdns.title=Dynamische Internetadresse einstellen
 wizard.setupsuccess=Setup erfolgreich
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Ihre Daten werden nun mit den anderen PCs synchronisiert
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=Bitte w\u00e4hlen Sie nun das lokale Verzeichnis
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -937,6 +953,5 @@ wizard.whattodo.bordertext=Bitte w\u00e4hlen Sie
 wizard.whattodo.filesharing=Filesharing
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
 wizard.whattodo.projectwork=Projekt Synchronisation
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
-
-transfers.hashing=Berechne Hashes
