--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -75,6 +75,9 @@ addressEditor.title=IP-Reeks
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
 chatpanel.chat_with=Chat met
 chatpanel.member_connected_at_time={0} verbonden om {1}
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
 folderpanel.hometab.number_of_available_files_at_other_members=Aantal beschikbare bestanden bij andere leden
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Aantal verwijderde bestand
 folderpanel.hometab.number_of_local_files_in_folder=Aantal lokale bestanden in Folder
 folderpanel.hometab.public_folder=Publiek
 folderpanel.hometab.secret_folder=Geheim
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=Synchronizatie nog
 folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
@@ -340,11 +345,13 @@ folderrepository.warnonclose.text=Deze folders zijn nog niet gesynchroniseerd\:\
 folderrepository.warnonclose.title=Doorgaan met sluiten?
 
 ##freelimitdialog.buypro=Buy PowerFolder Pro
-##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-##freelimitdialog.ignore=Ignore
-##freelimitdialog.reason=Reason\: More than {0} Folders configured.
-##freelimitdialog.title=Heavy use detected
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 ##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=Geen gebruiker gevonden
@@ -359,6 +366,7 @@ friendspanel.currently_online=Nu verbonden
 friendspanel.n_a=n/b
 friendspanel.search_for_user=Zoek gebruiker
 friendspanel.search_results=Zoek resultaten
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 ##general.apply=Apply
 general.availability=Beschikbaarheid
@@ -526,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Kan bron niet verbinden
 
 onlinelabel.connecting=Verbinden
 onlinelabel.connecting.text=U bent verbonden, maar met weinig gebruikers. Wacht even zodat uw verbinding compleet is. Als dat niet werkt lees de FAQ @ http\://www.powerfolder.com (engels)
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=Niet verbonden
 onlinelabel.offline.text=Niet verbonden. Niet verbonder met een bebruiker in het PowerFolder netwerk
 onlinelabel.online=Verbonden
@@ -572,6 +582,7 @@ preferences.dialog.bind.tooltip=Selecteer het adres die PowerFolder moet gebruik
 preferences.dialog.bindDescr=Interface beschrijving
 preferences.dialog.colortheme=Kleur thema
 preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogen
@@ -641,6 +652,7 @@ preferences.dialog.titleProcessing=verwerken...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Gebruik ZIP compressie op LAN 
 preferences.dialog.useziponlan.tooltip=Activeer als bestanden makkelijk te comprimeren zijn (Dit beinvloed mogelijk het CPU gebruik)
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=Waarschuwing
 preferences.dialog.xbehavior=Sluit gedrag
 preferences.dialog.xbehavior.exit=Programma afsluiten
@@ -825,6 +837,7 @@ syncprofile.leecher.name=Torrent downloader
 syncprofile.leechreleaser.name=Verspreidt Torrents
 syncprofile.manualdownload.name=Download op verzoek
 syncprofile.projectwork.name=Project
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=Exit
 systray.hide=Verberg
@@ -848,6 +861,7 @@ title.search.users=Zoek gebruikers
 transfers.completed=klaar
 transfers.eta=Nog...
 transfers.from=Van
+##transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=Lokaal
 transfers.pending=Later
@@ -903,6 +917,7 @@ wizard.projectsync.successjoin=U bent nu lid van het project
 wizard.projectsync.takepartsync=Neem deel in een project synchronisatie
 wizard.projectsync.title=Project synchronisatie
 ##wizard.sendinvitations.additionaltext=Additional Information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
 wizard.sendinvitations.offline=Niet verbonden
 wizard.sendinvitations.overpf=Via PowerFolder Nu
@@ -918,8 +933,14 @@ wizard.setupdns.improvesread=Dit bevorderd uw bereikbaarheid als een een dynamis
 wizard.setupdns.nodnssetup=U heeft nog geen (dynamic) dns adres\!
 wizard.setupdns.title=Setup (dynamic) dns
 wizard.setupsuccess=Setup success
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=U kunt nu meerdere PCs lid maken van deze folder
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=Kies een lokale map waar de bestanden terecht moeten komen
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -932,4 +953,5 @@ wizard.whattodo.bordertext=Kies een optie
 wizard.whattodo.filesharing=Delen van bestanden
 wizard.whattodo.openonlinedocumentation=Open Documentatie op internet
 wizard.whattodo.projectwork=Project synchroniseren
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=Wat wilt u doen?
