--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -75,6 +75,9 @@ addmodifierfriend.name=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0434\u
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=\u0421\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435 \u043d\u0435 \u043e\u0442\u043e\u0441\u043b\u0430\u043d\u043e, \u0442.\u043a. '{0}' \u043d\u0435 \u0432 \u0441\u0435\u0442\u0438\!
 chatpanel.chat_with=\u0427\u0430\u0442 \u0441
 chatpanel.member_connected_at_time={0} \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u043e \u0432 {1}
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=\u0424\u0430\u0439\u043b \u
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0435 \u043c\u0435\u0441\u0442\u043e\u043d\u0430\u0445\u043e\u0436\u0434\u0435\u043d\u0438\u0435 \u041f\u0430\u043f\u043a\u0438
 folderpanel.hometab.local_size=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
 folderpanel.hometab.number_of_available_files_at_other_members=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0434\u043e\u0441\u0442\u0443\u043f\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432 \u0443 \u0434\u0440\u0443\u0433\u0438\u0445 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=\u041a\u043e\u043b\u0438\u
 folderpanel.hometab.number_of_local_files_in_folder=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432 \u0432 \u041f\u0430\u043f\u043a\u0435
 folderpanel.hometab.public_folder=\u041e\u0442\u043a\u0440\u044b\u0442\u043e
 folderpanel.hometab.secret_folder=\u0421\u0435\u043a\u0440\u0435\u0442\u043d\u043e
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=\u0412\u0440\u0435\u043c\u044f \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 folderpanel.hometab.synchronisation_percentage=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 folderpanel.hometab.title=\u0421\u0442\u0430\u0440\u0442
@@ -340,11 +345,13 @@ folderrepository.warnonclose.text=\u042d\u0442\u0438 \u041f\u0430\u043f\u043a\u0
 folderrepository.warnonclose.title=\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c \u0412\u044b\u0445\u043e\u0434?
 
 ##freelimitdialog.buypro=Buy PowerFolder Pro
-##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-##freelimitdialog.ignore=Ignore
-##freelimitdialog.reason=Reason\: More than {0} Folders configured.
-##freelimitdialog.title=Heavy use detected
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 ##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d
@@ -359,6 +366,7 @@ friendspanel.currently_online=\u0412 \u0441\u0435\u0442\u0438
 friendspanel.n_a=\u043d\u0435\u0442\u0443
 friendspanel.search_for_user=\u0418\u0441\u043a\u0430\u0442\u044c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
 friendspanel.search_results=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \u043f\u043e\u0438\u0441\u043a\u0430
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 ##general.apply=Apply
 general.availability=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u043e\u0441\u0442\u044c
@@ -526,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=\u041d\u0435\u0432\u043e\u043
 
 onlinelabel.connecting=\u0421\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c
 onlinelabel.connecting.text=\u0412\u044b online, \u043d\u043e \u043f\u043e\u043a\u0430 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u044b \u0441 \u043c\u0430\u043b\u044b\u043c \u043a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e\u043c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439. \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u043e\u0434\u043e\u0436\u0434\u0438\u0442\u0435 \u043a\u043e\u0440\u043e\u0442\u043a\u043e\u0435 \u0432\u0440\u0435\u043c\u044f \u0434\u043e \u043f\u043e\u043b\u043d\u043e\u0433\u043e \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f. \u0415\u0441\u043b\u0438 \u044d\u0442\u043e\u0433\u043e \u043d\u0435 \u043f\u0440\u043e\u0438\u0437\u043e\u0439\u0434\u0435\u0442, \u0447\u0438\u0442\u0430\u0439\u0442\u0435 FAQ \u043d\u0430 http\://www.powerfolder.com
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=\u041d\u0435 \u0432 \u0441\u0435\u0442\u0438
 onlinelabel.offline.text=\u0412\u044b \u043d\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u044b \u0441 \u0434\u0440\u0443\u0433\u0438\u043c\u0438 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f\u043c\u0438 PowerFolder
 onlinelabel.online=\u0412 \u0441\u0435\u0442\u0438
@@ -572,6 +582,7 @@ preferences.dialog.bind.tooltip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435
 preferences.dialog.bindDescr=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0430\u0434\u0440\u0435\u0441\u0430
 preferences.dialog.colortheme=\u0426\u0432\u0435\u0442\u043e\u0432\u0430\u044f \u0433\u0430\u043c\u043c\u0430
 preferences.dialog.createdesktopshortcuts=\u0420\u0430\u0437\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u044f\u0440\u043b\u044b\u043a \u043d\u0430 \u0440\u0430\u0431\u043e\u0447\u0435\u043c \u0441\u0442\u043e\u043b\u0435
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u0421\u043f\u0440\u0430\u0448\u0438\u0432\u0430\u0442\u044c \u043e \u0434\u043e\u0431\u043e\u0432\u043b\u0435\u043d\u0438\u0438 \u043a \u0434\u0440\u0443\u0437\u044c\u044f\u043c, \u043a\u043e\u0433\u0434\u0430 \u0443\u0437\u0435\u043b \u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0441\u044f \u0447\u043b\u0435\u043d\u043e\u043c \u041f\u0430\u043f\u043a\u0438
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=\u0414\u0438\u0430\u043b\u043e\u0433\u0438
@@ -641,6 +652,7 @@ preferences.dialog.titleProcessing=\u0432 \u043f\u0440\u043e\u0446\u0435\u0441\u
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0441\u0436\u0430\u0442\u0438\u0435 ZIP \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0439 \u0441\u0435\u0442\u0438
 preferences.dialog.useziponlan.tooltip=\u0412\u043a\u043b\u044e\u0447\u0430\u0442\u044c \u0435\u0441\u043b\u0438 \u0444\u0430\u0439\u043b\u044b \u043f\u0440\u043e\u0441\u0442\u044b \u0434\u043b\u044f \u0441\u0436\u0430\u0442\u0438\u044f (\u043e\u0442\u0440\u0430\u0436\u0430\u0435\u0442\u0441\u044f \u043d\u0430 \u0437\u0430\u0433\u0440\u0443\u044b\u043a\u0435 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u043e\u0440\u0430)
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435
 preferences.dialog.xbehavior=\u041f\u0440\u0438 \u0437\u0430\u043a\u0440\u044b\u0442\u0438\u0438 PowerFolder
 preferences.dialog.xbehavior.exit=\u0432\u044b\u0439\u0442\u0438 \u0438\u0437 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u044b
@@ -825,6 +837,7 @@ syncprofile.leecher.name=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0430 
 syncprofile.leechreleaser.name=\u0421\u043e\u0437\u0434\u0430\u0442\u0435\u043b\u044c \u0442\u043e\u0440\u0440\u0435\u043d\u0442\u0430
 syncprofile.manualdownload.name=\u0420\u0443\u0447\u043d\u043e\u0435 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0435
 syncprofile.projectwork.name=\u041f\u0440\u043e\u0435\u043a\u0442
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u044c
 systray.hide=\u0421\u043a\u0440\u044b\u0442\u044c
@@ -848,6 +861,7 @@ title.search.users=\u041f\u043e\u0438\u0441\u043a \u043f\u043e\u043b\u044c\u0437
 transfers.completed=\u0433\u043e\u0442\u043e\u0432\u043e
 transfers.eta=ETA
 transfers.from=\u041e\u0442
+##transfers.hashing=Hashing
 transfers.kbs={0} \u041a\u0431/\u0441
 transfers.local=\u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e
 transfers.pending=\u041e\u0436\u0438\u0434\u0430\u043d\u0438\u0435
@@ -903,6 +917,7 @@ wizard.projectsync.successjoin=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d
 wizard.projectsync.takepartsync=\u041f\u0440\u0438\u043d\u044f\u0442\u044c \u0443\u0447\u0430\u0441\u0442\u0438\u044f \u0432 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
 wizard.projectsync.title=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044f
 ##wizard.sendinvitations.additionaltext=Additional Information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 ##wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
 ##wizard.sendinvitations.offline=Not connected
 ##wizard.sendinvitations.overpf=Via PowerFolder now
@@ -918,8 +933,14 @@ wizard.projectsync.title=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\
 ##wizard.setupdns.nodnssetup=You did not setup a (dynamic) dns address yet\!
 ##wizard.setupdns.title=Setup (dynamic) dns
 ##wizard.setupsuccess=Setup successfully
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 ##wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 ##wizard.syncpcspanel.selecttarget=Please select local target directory
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -932,4 +953,5 @@ wizard.projectsync.title=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\
 ##wizard.whattodo.filesharing=Share Files
 ##wizard.whattodo.openonlinedocumentation=Open Online Documentation
 ##wizard.whattodo.projectwork=Synchronize Project
+##wizard.whattodo.syncpcs=Mirror
 ##wizard.whattodo.title=What do you want to do ?
