--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -75,6 +75,9 @@ addressEditor.title=IP-Omr\u00e5de
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=meddelande kan ej levereras eftersom '{0}' inte \u00e4r ansluten
 chatpanel.chat_with=Chatta med
 chatpanel.member_connected_at_time={0} inkopplad kl {1}
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Filen finns redan
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Lokal folder plats
 folderpanel.hometab.local_size=Lokal storlek
 folderpanel.hometab.number_of_available_files_at_other_members=Antal tillg\u00e4ngliga filer hos andra medlemmar
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Antal borttagna filer i fo
 folderpanel.hometab.number_of_local_files_in_folder=Antal lokala filer i foldern
 folderpanel.hometab.public_folder=Offentlig
 folderpanel.hometab.secret_folder=Privat
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=Synkronisering klar om
 folderpanel.hometab.synchronisation_percentage=Synkroniserat i procent 
 folderpanel.hometab.title=Hem
@@ -340,11 +345,13 @@ folderrepository.warnonclose.text=Dessa foldrar \u00e4r \u00e4nnu inte synkronis
 folderrepository.warnonclose.title=Forts\u00e4tt st\u00e4nga?
 
 ##freelimitdialog.buypro=Buy PowerFolder Pro
-##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-##freelimitdialog.ignore=Ignore
-##freelimitdialog.reason=Reason\: More than {0} Folders configured.
-##freelimitdialog.title=Heavy use detected
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 ##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=Ingen anv\u00e4ndare hittad
@@ -359,6 +366,7 @@ friendspanel.currently_online=Just nu online
 friendspanel.n_a=n/a
 friendspanel.search_for_user=S\u00f6k efter anv\u00e4ndare
 friendspanel.search_results=S\u00f6k resultat
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 general.apply=Verkst\u00e4ll
 general.availability=Tillg\u00e4nglighet
@@ -526,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Kan inte ansluta till k\u00e4
 
 onlinelabel.connecting=Ansluter
 onlinelabel.connecting.text=Du \u00e4r online, men ansluten till v\u00e4ldigt f\u00e5 anv\u00e4ndare. V\u00e4nta en liten stund f\u00f6r att bli fullt ansluten. Om det inte g\u00e5r, l\u00e4s FAQ @ http\://www.powerfolder.com
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=Offline
 onlinelabel.offline.text=Du \u00e4r offline. Inte ansluten till n\u00e5gon annan anv\u00e4ndare i PowerFolder-n\u00e4tverket
 onlinelabel.online=Online
@@ -572,6 +582,7 @@ preferences.dialog.bind.tooltip=V\u00e4lj adressen PowerFolder skall anv\u00e4nd
 preferences.dialog.bindDescr=Gr\u00e4nssnittbeskrivning
 preferences.dialog.colortheme=F\u00e4rgtema
 preferences.dialog.createdesktopshortcuts=Skapa genv\u00e4g p\u00e5 skrivbordet
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=
 preferences.dialog.dialogs.check_for_program_updates=S\u00f6k efter PowerFolder program uppdateringar
 preferences.dialog.dialogs.title=Dialoger
@@ -641,6 +652,7 @@ preferences.dialog.titleProcessing=Arbetar...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Anv\u00e4nd ZIP komprimering p\u00e5 LAN 
 preferences.dialog.useziponlan.tooltip=Aktivera om filerna som skall skickas \u00e4r enkla att komprimera (detta kan p\u00e5verka din CPU belastning)
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=Varning
 preferences.dialog.xbehavior=\u00c5tg\u00e4rd vid avslut
 preferences.dialog.xbehavior.exit=Avsluta programmet
@@ -825,6 +837,7 @@ syncprofile.leecher.name=Torrent nedladdning
 syncprofile.leechreleaser.name=Torrent uppladdning
 syncprofile.manualdownload.name=Manuell
 syncprofile.projectwork.name=Projektarbete
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=Avsluta
 systray.hide=G\u00f6m
@@ -848,6 +861,7 @@ title.search.users=Hitta v\u00e4nner
 transfers.completed=klar
 transfers.eta=Klar om
 transfers.from=Fr\u00e5n
+##transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=lokal
 transfers.pending=V\u00e4ntar
@@ -903,6 +917,7 @@ wizard.projectsync.successjoin=Du har lyckats g\u00e5 med i projektet\!
 wizard.projectsync.takepartsync=Tag del i en synkronisering
 wizard.projectsync.title=Projekt synkronisering
 wizard.sendinvitations.additionaltext=Ytterligare information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=Ge aldrig ut inbjudningsfiler till n\u00e5gon du inte litar p\u00e5.
 wizard.sendinvitations.offline=Ej ansluten
 wizard.sendinvitations.overpf=Via PowerFolder nu
@@ -918,8 +933,14 @@ wizard.setupdns.improvesread=Det g\u00f6r det l\u00e4ttare att n\u00e5 dig. Men 
 wizard.setupdns.nodnssetup=Du har inte satt upp n\u00e5gon (dynamisk) DNS adress \u00e4nnu\!
 wizard.setupdns.title=S\u00e4tt upp (dynamisk) DNS
 wizard.setupsuccess=Inst\u00e4llningarna lyckades
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Andra datorer kan g\u00e5 med i denna folder nu
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=Var v\u00e4nlig ange lokal m\u00e5l-mapp
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -932,4 +953,5 @@ wizard.whattodo.bordertext=V\u00e4lj ett alternativ
 wizard.whattodo.filesharing=Dela Filer
 wizard.whattodo.openonlinedocumentation=\u00d6ppna online dokumentation
 wizard.whattodo.projectwork=Synkronisera projekt
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=Vad vill du g\u00f6ra ?
