--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -75,6 +75,9 @@ buypro.description=\u7acb\u5373\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248
 buypro.key=B
 buypro.name=\u8d2d\u4e70\u4e13\u4e1a\u7248
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=\u56e0\u4e3a\u4e0d\u80fd\u8fde\u63a5'{0}'\uff0c\u6d88\u606f\u4e0d\u80fd\u4f20\u9012
 chatpanel.chat_with=\u804a\u5929
 chatpanel.member_connected_at_time={0} \u4e8e {1} \u8fde\u63a5
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=\u6587\u4ef6\u5df2\u7ecf\u5
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=\u672c\u5730\u6587\u4ef6\u5939\u4f4d\u7f6e
 folderpanel.hometab.local_size=\u672c\u5730\u5927\u5c0f
 folderpanel.hometab.number_of_available_files_at_other_members=\u5176\u4ed6\u7528\u6237\u5904\u7684\u6709\u6548\u6587\u4ef6\u6570
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=\u6587\u4ef6\u5939\u5df2\u
 folderpanel.hometab.number_of_local_files_in_folder=\u6587\u4ef6\u5939\u7684\u672c\u5730\u6587\u4ef6\u6570
 folderpanel.hometab.public_folder=\u516c\u5171
 folderpanel.hometab.secret_folder=\u79c1\u6709
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=\u540c\u6b65 ETA
 folderpanel.hometab.synchronisation_percentage=\u540c\u6b65\u7387
 folderpanel.hometab.title=\u5e38\u89c4
@@ -339,6 +344,14 @@ folderrepository.warnonclose.neveraskagain=\u4e0d\u518d\u8be2\u95ee\u3002
 folderrepository.warnonclose.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u672a\u540c\u6b65\uff1a\n\n\n\n{0}\n\n\n\u7ee7\u7eed\u9000\u51fa\uff1f
 folderrepository.warnonclose.title=\u7ee7\u7eed\u9000\u51fa\uff1f
 
+##freelimitdialog.buypro=Buy PowerFolder Pro
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 freelimitdialog.whatispro=\u4e3a\u4ec0\u4e48\u6211\u8981\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248?
 
 friendsearch.no_user_found=\u6ca1\u6709\u627e\u5230\u7528\u6237
@@ -353,6 +366,7 @@ friendspanel.currently_online=\u5f53\u524d\u5728\u7ebf
 friendspanel.n_a=n/a
 friendspanel.search_for_user=\u67e5\u627e\u7528\u6237
 friendspanel.search_results=\u67e5\u627e\u7ed3\u679c
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 general.apply=\u5e94\u7528
 general.availability=\u6709\u6548\u6027
@@ -520,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=\u4e0d\u80fd\u8fde\u63a5\u523
 
 onlinelabel.connecting=\u8fde\u63a5\u4e2d
 onlinelabel.connecting.text=\u4f60\u5df2\u7ecf\u5728\u7ebf\uff0c\u4f46\u8fde\u63a5\u7684\u7528\u6237\u5f88\u5c11\u3002\u7a0d\u7b49\u4ee5\u4fbf\u5b8c\u5168\u8fde\u63a5\u3002\u5982\u679c\u4ecd\u7136\u4e0d\u884c\uff0c\u53c2\u89c1\u7591\u96be\u89e3\u8bfb http\://www.powerfolder.com
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=\u79bb\u7ebf
 onlinelabel.offline.text=\u4f60\u76ee\u524d\u79bb\u7ebf\u3002\u6ca1\u6709\u548cPowerFolder\u7684\u7528\u6237\u8fde\u63a5
 onlinelabel.online=\u5728\u7ebf
@@ -566,6 +582,7 @@ preferences.dialog.bind.tooltip=\u9009\u62e9PowerFolder\u4f7f\u7528\u7684IP\u573
 preferences.dialog.bindDescr=\u8be6\u7ec6\u4fe1\u606f
 preferences.dialog.colortheme=\u98ce\u683c
 preferences.dialog.createdesktopshortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u5982\u679c\u7528\u6237\u6210\u4e3a\u6587\u4ef6\u5939\u6210\u5458\uff0c\u63d0\u793a\u662f\u5426\u6dfb\u52a0\u4e3a\u597d\u53cb
 preferences.dialog.dialogs.check_for_program_updates=\u68c0\u67e5PowerFolder\u7a0b\u5e8f\u5347\u7ea7\u3002
 preferences.dialog.dialogs.title=\u5bf9\u8bdd\u6846
@@ -635,6 +652,7 @@ preferences.dialog.titleProcessing=\u5904\u7406\u4e2d\u2026\u2026
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528ZIP\u538b\u7f29 
 preferences.dialog.useziponlan.tooltip=\u5728\u4f20\u8f93\u7684\u6587\u4ef6\u5bb9\u6613\u538b\u7f29\u65f6\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=\u8b66\u544a
 preferences.dialog.xbehavior=\u5173\u95ed\u7a97\u53e3\u65f6
 preferences.dialog.xbehavior.exit=\u9000\u51fa\u7a0b\u5e8f
@@ -819,6 +837,7 @@ syncprofile.leecher.name=\u6587\u4ef6\u4e0b\u8f7d\u8005
 syncprofile.leechreleaser.name=\u6587\u4ef6\u53d1\u5e03\u8005
 syncprofile.manualdownload.name=\u624b\u52a8\u4e0b\u8f7d
 syncprofile.projectwork.name=\u540c\u6b65\u9879\u76ee
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=\u9000\u51fa
 systray.hide=\u9690\u85cf
@@ -842,6 +861,7 @@ title.search.users=\u67e5\u627e\u7528\u6237
 transfers.completed=\u5b8c\u6210
 transfers.eta=ETA
 transfers.from=\u6e90
+##transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=\u672c\u5730
 transfers.pending=Pending
@@ -897,6 +917,7 @@ wizard.projectsync.successjoin=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u9879\
 wizard.projectsync.takepartsync=\u52a0\u5165\u540c\u6b65
 wizard.projectsync.title=\u540c\u6b65\u9879\u76ee
 wizard.sendinvitations.additionaltext=\u9644\u52a0\u4fe1\u606f
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.offline=\u672a\u8fde\u63a5
 wizard.sendinvitations.overpf=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
@@ -912,8 +933,14 @@ wizard.setupdns.improvesread=\u8fd9\u4f1a\u6539\u5584\u4f60\u7684\u8fde\u63a5\u6
 wizard.setupdns.nodnssetup=\u4f60\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u52a8\u6001DNS\u5730\u5740\uff01
 wizard.setupdns.title=\u8bbe\u7f6e\u52a8\u6001DNS
 wizard.setupsuccess=\u8bbe\u7f6e\u6210\u529f
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=\u5176\u5b83\u7535\u8111\u5df2\u7ecf\u53ef\u4ee5\u52a0\u5165\u8be5\u6587\u4ef6\u5939\u4e86
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=\u8bf7\u9009\u62e9\u672c\u5730\u76ee\u6807\u6587\u4ef6\u5939
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 wizard.webservice.enteraccount=\u8f93\u5165\u60a8\u7684\u8d26\u53f7\u6765\u767b\u5f55\u7f51\u7edc\u670d\u52a1
 wizard.webservice.learnmore=\u4ec0\u4e48\u662fPowerFolder\u7f51\u7edc\u670d\u52a1?
 wizard.webservice.login=\u767b\u5f55\u5728\u7ebf\u5b58\u50a8
@@ -926,4 +953,5 @@ wizard.whattodo.bordertext=\u9009\u62e9\u4f60\u8981\u505a\u7684\u4e8b\u60c5
 wizard.whattodo.filesharing=\u540c\u6b65\u6587\u4ef6
 wizard.whattodo.openonlinedocumentation=\u6253\u5f00\u5728\u7ebf\u6587\u6863
 wizard.whattodo.projectwork=\u540c\u6b65\u9879\u76ee
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=\u4f60\u60f3\u505a\u4ec0\u4e48\uff1f
