--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -75,6 +75,9 @@ addressEditor.title=Rango-IP
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=el mensaje no se pudo entregar porque '{0}' no est\u00e1 conectado
 chatpanel.chat_with=Charlar con
 chatpanel.member_connected_at_time={0} conectado a las {1}
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=El Archivo ya existe
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Ubicaci\u00f3n carpeta local
 folderpanel.hometab.local_size=Tama\u00f1o local
 folderpanel.hometab.number_of_available_files_at_other_members=N\u00famero de archivos disponibles con otros miembros
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=N\u00famero de archivos bo
 folderpanel.hometab.number_of_local_files_in_folder=N\u00famero de archivos locales en la carpeta
 ##folderpanel.hometab.public_folder=Public
 ##folderpanel.hometab.secret_folder=Secret
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 ##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Porcentaje de sincronizaci\u00f3n
 ##folderpanel.hometab.title=Home
@@ -340,11 +345,13 @@ folderrepository.warnonclose.text=Estas carpetas no se sincronizaron a\u00fan\:\
 folderrepository.warnonclose.title=Continuar con Salir?
 
 ##freelimitdialog.buypro=Buy PowerFolder Pro
-##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-##freelimitdialog.ignore=Ignore
-##freelimitdialog.reason=Reason\: More than {0} Folders configured.
-##freelimitdialog.title=Heavy use detected
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 ##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=No se encontr\u00f3 el usuario
@@ -359,6 +366,7 @@ friendspanel.connected=Conectado
 friendspanel.n_a=n/d
 friendspanel.search_for_user=Buscar usuario
 friendspanel.search_results=Resultados de la b\u00fasqueda
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 ##general.apply=Apply
 general.availability=Disponibilidad
@@ -526,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=No se puede conectar con la f
 
 onlinelabel.connecting=Conectando
 onlinelabel.connecting.text=Est\u00e1 en l\u00ednea, pero conectado a pocos usuarios. Espere un poco para estar completamente conectado. Si no se llega a conectar, lea el FAQ en http\://www.powerfolder.com
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=Fuera de l\u00ednea
 onlinelabel.offline.text=Est\u00e1 fuera de l\u00ednea. No est\u00e1 conectado a otro usuario de la red PowerFolder
 onlinelabel.online=En l\u00ednea
@@ -572,6 +582,7 @@ preferences.dialog.bind.tooltip=Elija la direcci\u00f3n que PowerFolder debe uti
 preferences.dialog.bindDescr=descripci\u00f3n de la Interface
 preferences.dialog.colortheme=Color del tema
 preferences.dialog.createdesktopshortcuts=Crear acceso directo en el Escritorio
+##preferences.dialog.debugReports=Enable debug reports
 ##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogos
@@ -641,6 +652,7 @@ preferences.dialog.titleProcessing=procesando...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Usar Compresion Zip en LAN
 ##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=Advertencia
 preferences.dialog.xbehavior=Acci\u00f3n al cerrar
 preferences.dialog.xbehavior.exit=Salir del programa
@@ -825,6 +837,7 @@ syncprofile.leecher.name=Descargar de Torrent
 syncprofile.leechreleaser.name=Lanzar Torrent
 syncprofile.manualdownload.name=Descarga manual
 syncprofile.projectwork.name=Proyecto
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=Salir
 systray.hide=Ocultar
@@ -848,6 +861,7 @@ title.search.users=Buscar usuarios
 transfers.completed=terminados
 ##transfers.eta=ETA
 transfers.from=De
+##transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=Pendientes
@@ -903,6 +917,7 @@ wizard.projectsync.successjoin=\u00a1Se ha unido con \u00e9xito al proyecto\!
 wizard.projectsync.takepartsync=Tome parte en una sincronizaci\u00f3n
 wizard.projectsync.title=Proyecto sincronizado
 ##wizard.sendinvitations.additionaltext=Additional Information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
 wizard.sendinvitations.offline=No conectado
 wizard.sendinvitations.overpf=Via PowerFolder ahora
@@ -918,8 +933,14 @@ wizard.setupdns.improvesread=Esto mejora su localizaci\u00f3n en la red. Aunque 
 wizard.setupdns.nodnssetup=\u00a1A\u00fan no ha configfurado una dns (din\u00e1mica)\!
 wizard.setupdns.title=Configurar dns (din\u00e1mica)
 wizard.setupsuccess=Ajustes realizados con \u00e9xito
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Est\u00e1 listo para unir m\u00e1s PC en esta carpeta
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=Por favor, seleccione el direcctorio local
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -932,4 +953,5 @@ wizard.whattodo.bordertext=Elija su acci\u00f3n
 wizard.whattodo.filesharing=Compartir archivos
 wizard.whattodo.openonlinedocumentation=Abrir Documentaci\u00f3n En-L\u00ednea
 wizard.whattodo.projectwork=Sincronizar un proyecto
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=\u00bfQu\u00e9 desea hacer?
