--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -75,6 +75,9 @@ addressEditor.title=Plage d'adresses
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver=Le message ne peut pas \u00eatre d\u00e9livr\u00e9 car '{0}' n'est pas connect\u00e9
 chatpanel.chat_with=Discuter avec
 chatpanel.member_connected_at_time={0} connect\u00e9 \u00e0 {1}
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Fichier existant
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Emplacement du dossier local
 folderpanel.hometab.local_size=Taille locale
 folderpanel.hometab.number_of_available_files_at_other_members=Nombre de fichiers disponibles chez les membres connect\u00e9s
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Nombre de fichiers effac\u
 folderpanel.hometab.number_of_local_files_in_folder=Nombre de fichiers locaux dans le dossier
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Priv\u00e9
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Pourcentage de synchronisation
 folderpanel.hometab.title=Accueil
@@ -340,11 +345,13 @@ folderrepository.warnonclose.text=Ces dossiers ne sont pas encore synchronis\u00
 folderrepository.warnonclose.title=Confirmer la sortie ?
 
 ##freelimitdialog.buypro=Buy PowerFolder Pro
-##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-##freelimitdialog.ignore=Ignore
-##freelimitdialog.reason=Reason\: More than {0} Folders configured.
-##freelimitdialog.title=Heavy use detected
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 ##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=Aucun utilisateur trouv\u00e9
@@ -359,6 +366,7 @@ friendspanel.currently_online=Actuellement en ligne
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Rechercher un utilisateur
 friendspanel.search_results=R\u00e9sultats de la recherche
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 ##general.apply=Apply
 general.availability=Disponibilit\u00e9
@@ -526,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Imposible de se connecter \u0
 
 onlinelabel.connecting=Connexion en cours
 onlinelabel.connecting.text=Vous \u00eates en ligne, mais connect\u00e9s \u00e0 tr\u00e8s peu d'utilisateurs. Patientez quelques instants avant d'\u00eatre compl\u00e8tement connect\u00e9s. Si cela \u00e9choue, lire la FAQ suivante (Anglais) @ http\://www.powerfolder.com
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=D\u00e9connect\u00e9
 onlinelabel.offline.text=Vous \u00eates d\u00e9connect\u00e9s. Connexion \u00e0 aucun utilisateur sur le r\u00e9seau PowerFolder
 onlinelabel.online=Connect\u00e9
@@ -572,6 +582,7 @@ preferences.dialog.bind.tooltip=S\u00e9lectionner l'adresse utilis\u00e9e par Po
 preferences.dialog.bindDescr=Description de l'interface 
 preferences.dialog.colortheme=Th\u00e8me de l'interface
 preferences.dialog.createdesktopshortcuts=Raccourcis sur le bureau Windows
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Pr\u00e9venir pour ajouter \u00e0 la liste d'ami(e)s si un noeud devient membre d'un dossier
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Message
@@ -641,6 +652,7 @@ preferences.dialog.titleProcessing=Execution...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Utilise la compression ZIP sur le r\u00e9seau local (LAN) 
 preferences.dialog.useziponlan.tooltip=Fonctionne si les fichiers \u00e0 transf\u00e9rer sont simples \u00e0 compresser (ceci peut affecter la charge processeur)
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=Attention
 preferences.dialog.xbehavior=Action de fermeture
 preferences.dialog.xbehavior.exit=Quitter le programme
@@ -825,6 +837,7 @@ syncprofile.leecher.name=T\u00e9l\u00e9chargement via un fichier Torrent
 syncprofile.leechreleaser.name=Emplacement du fichier Torrent
 syncprofile.manualdownload.name=T\u00e9l\u00e9chargement manuel
 syncprofile.projectwork.name=Synchronisation de type Projet
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=Quitter
 systray.hide=Mettre en cache
@@ -848,6 +861,7 @@ title.search.users=Rechercher un utilisateur
 transfers.completed=Termin\u00e9
 transfers.eta=ETA
 transfers.from=Depuis
+##transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=En attente
@@ -903,6 +917,7 @@ wizard.projectsync.successjoin=Vous venez de rejoindre le Projet\!
 wizard.projectsync.takepartsync=Prendre part \u00e0 une synchronisation de type Projet
 wizard.projectsync.title=Synchronisation de type Projet
 ##wizard.sendinvitations.additionaltext=Additional Information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=\nNe le diffusez jamais aupr\u00e8s d'inconnu(e)s
 wizard.sendinvitations.offline=D\u00c3\u00a9connect\u00c3\u00a9e
 wizard.sendinvitations.overpf=Instantan\u00c3\u00a9ment via PowerFolder
@@ -918,8 +933,14 @@ wizard.setupdns.improvesread=Ceci am\u00e9liore la qualit\u00e9 de votre connect
 wizard.setupdns.nodnssetup=Vous n'avez pas encore configur\u00e9 d'adresse (dynamique) DNS\!
 wizard.setupdns.title=Configuration facultative du (dynamic) DNS
 wizard.setupsuccess=Configuration termin\u00e9e avec succ\u00e8s
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=D'autres PCs peuvent se connecter au dossier maintenant
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=Merci d'indiquer le r\u00e9pertoire local cible
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -932,4 +953,5 @@ wizard.whattodo.bordertext=Choisir votre action
 wizard.whattodo.filesharing=Partage de fichiers
 wizard.whattodo.openonlinedocumentation=Ouvrir la documentation en ligne
 wizard.whattodo.projectwork=Synchroniser un projet
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=Que voulez-vous faire ?
