--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -75,6 +75,9 @@ addressEditor.title=IP \u7bc4\u56f2
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
+##chat.notification.option1=Answer
+##chat.notification.option2=Close
+
 chatpanel.cannot_deliver='{0}' \u3068\u63a5\u7d9a\u3055\u308c\u3066\u3044\u306a\u3044\u305f\u3081\u3001\u30e1\u30c3\u30bb\u30fc\u30b8\u9001\u9054\u4e0d\u53ef
 chatpanel.chat_with=\u30c1\u30e3\u30c3\u30c8\u76f8\u624b\: 
 chatpanel.member_connected_at_time={1} {0} \u63a5\u7d9a
@@ -304,6 +307,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=\u540c\u4e00\u30d5\u30a1\u3
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306e\u5834\u6240
 folderpanel.hometab.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
 folderpanel.hometab.number_of_available_files_at_other_members=\u4ed6\u30e1\u30f3\u30d0\u30fc\u304b\u3089\u53d6\u5f97\u53ef\u80fd\u306a\u30d5\u30a1\u30a4\u30eb\u6570
@@ -311,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=\u30d5\u30a9\u30eb\u30c0\u
 folderpanel.hometab.number_of_local_files_in_folder=\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30ed\u30fc\u30ab\u30eb\u30d5\u30a1\u30a4\u30eb\u6570
 folderpanel.hometab.public_folder=\u30d1\u30d6\u30ea\u30c3\u30af
 folderpanel.hometab.secret_folder=\u30b7\u30fc\u30af\u30ec\u30c3\u30c8
+##folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=\u540c\u671f\u63a8\u5b9a\u6240\u8981\u6642\u9593
 folderpanel.hometab.synchronisation_percentage=\u540c\u671f\u5272\u5408
 folderpanel.hometab.title=\u30db\u30fc\u30e0
@@ -340,11 +345,13 @@ folderrepository.warnonclose.text=\u4ee5\u4e0b\u306e\u30d5\u30a9\u30eb\u30c0\u30
 folderrepository.warnonclose.title=\u7d42\u4e86\u7d9a\u884c\uff1f
 
 ##freelimitdialog.buypro=Buy PowerFolder Pro
-##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-##freelimitdialog.ignore=Ignore
-##freelimitdialog.reason=Reason\: More than {0} Folders configured.
-##freelimitdialog.title=Heavy use detected
+##freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+##freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+##freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+##freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+##freelimitdialog.reduce=Reduce usage
+##freelimitdialog.title=Extensive use detected
 ##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=\u8a72\u5f53\u30e6\u30fc\u30b6\u30fc\u306a\u3057
@@ -359,6 +366,7 @@ friendspanel.currently_online=\u73fe\u5728\u30aa\u30f3\u30e9\u30a4\u30f3
 friendspanel.n_a=n/a
 friendspanel.search_for_user=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22
 friendspanel.search_results=\u691c\u7d22\u7d50\u679c
+##friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 ##general.apply=Apply
 general.availability=\u53d6\u5f97\u53ef\u80fd\u5148
@@ -526,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=\u30bd\u30fc\u30b9\u306b\u63a
 
 onlinelabel.connecting=\u63a5\u7d9a\u8a66\u884c\u7d99\u7d9a\u4e2d
 onlinelabel.connecting.text=\u73fe\u5728\u30aa\u30f3\u30e9\u30a4\u30f3\u3067\u3059\u304c\u63a5\u7d9a\u30e6\u30fc\u30b6\u30fc\u304c\u5c11\u306a\u3044\u72b6\u614b\u3067\u3059\u3002\u5b8c\u5168\u306b\u63a5\u7d9a\u3059\u308b\u306b\u306f\u3082\u3046\u5c11\u3057\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002\u72b6\u614b\u304c\u5168\u304f\u5909\u5316\u3057\u306a\u3044\u5834\u5408\u3001\u3053\u3061\u3089\u306e FAQ \u3092\u53c2\u7167\u3057\u3066\u304f\u3060\u3055\u3044\u3002http\://www.powerfolder.com
+##onlinelabel.disabled=Disabled (Extensive use detected)
+##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=\u30aa\u30d5\u30e9\u30a4\u30f3
 onlinelabel.offline.text=\u73fe\u5728\u30aa\u30d5\u30e9\u30a4\u30f3\u3067\u3059\u3002PowerFolder \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u4e0a\u306e\u30e6\u30fc\u30b6\u30fc\u306b\u63a5\u7d9a\u3057\u3066\u3044\u307e\u305b\u3093\u3002
 onlinelabel.online=\u30aa\u30f3\u30e9\u30a4\u30f3
@@ -572,6 +582,7 @@ preferences.dialog.bind.tooltip=PowerFolder \u3067\u4f7f\u7528\u3059\u308b\u30a2
 preferences.dialog.bindDescr=\u30a4\u30f3\u30bf\u30fc\u30d5\u30a7\u30a4\u30b9\u306e\u8aac\u660e
 preferences.dialog.colortheme=\u914d\u8272\u30c6\u30fc\u30de
 preferences.dialog.createdesktopshortcuts=\u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u306e\u4f5c\u6210
+##preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u30ce\u30fc\u30c9\u304c\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u306a\u308b\u5834\u5408\u306b\u53cb\u4eba\u30ea\u30b9\u30c8\u3078\u8ffd\u52a0\u3059\u308b\u304b\u78ba\u8a8d
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=\u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
@@ -641,6 +652,7 @@ preferences.dialog.titleProcessing=\u51e6\u7406\u4e2d...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=LAN \u5185\u3067\u306f ZIP \u5727\u7e2e\u3092\u4f7f\u7528 
 preferences.dialog.useziponlan.tooltip=\u8ee2\u9001\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u304c\u5bb9\u6613\u306b\u5727\u7e2e\u3067\u304d\u308b\u3082\u306e\u3067\u3042\u308b\u5834\u5408\u306b\u6709\u52b9\u306b\uff08CPU \u306e\u8ca0\u8377\u306b\u5f71\u97ff\u304c\u51fa\u308b\u53ef\u80fd\u6027\u3042\u308a\uff09
+##preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=\u8b66\u544a
 preferences.dialog.xbehavior=[\u9589\u3058\u308b]\u30dc\u30bf\u30f3\u3092\u62bc\u3057\u305f\u6642\u306e\u52d5\u4f5c
 preferences.dialog.xbehavior.exit=\u30d7\u30ed\u30b0\u30e9\u30e0\u3092\u7d42\u4e86
@@ -825,6 +837,7 @@ syncprofile.leecher.name=Torrent \u306e\u53d6\u5f97
 syncprofile.leechreleaser.name=Torrent \u306e\u914d\u5e03
 syncprofile.manualdownload.name=\u624b\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 syncprofile.projectwork.name=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30ef\u30fc\u30af
+##syncprofile.syncpcs.name=Mirror
 
 systray.exit=\u7d42\u4e86
 systray.hide=\u96a0\u3059
@@ -848,6 +861,7 @@ title.search.users=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22
 transfers.completed=\u5b8c\u4e86
 transfers.eta=\u63a8\u5b9a\u6240\u8981\u6642\u9593
 transfers.from=\u53d6\u5f97\u5143
+##transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=\u30ed\u30fc\u30ab\u30eb
 transfers.pending=\u5f85\u6a5f\u4e2d
@@ -903,6 +917,7 @@ wizard.projectsync.successjoin=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3078\u6b63\
 wizard.projectsync.takepartsync=\u65e2\u5b58\u306e\u540c\u671f\u306b\u53c2\u52a0\u3059\u308b
 wizard.projectsync.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f
 ##wizard.sendinvitations.additionaltext=Additional Information
+##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
 wizard.sendinvitations.offline=\u672a\u63a5\u7d9a
 wizard.sendinvitations.overpf=PowerFolder \u3092\u901a\u3058\u3066\u76f4\u3061\u306b
@@ -918,8 +933,14 @@ wizard.setupdns.improvesread=\u5fc5\u9808\u5165\u529b\u9805\u76ee\u3067\u306f\u3
 wizard.setupdns.nodnssetup=\u307e\u3060\uff08\u52d5\u7684\uff09DNS \u30a2\u30c9\u30ec\u30b9 \u304c\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3055\u308c\u3066\u3044\u307e\u305b\u3093\uff01
 wizard.setupdns.title=\uff08\u52d5\u7684\uff09DNS \u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
 wizard.setupsuccess=\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u6210\u529f
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=\u4ed6 PC \u3092\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3055\u305b\u308b\u3053\u3068\u304c\u3067\u304d\u308b\u72b6\u614b\u306b\u306a\u308a\u307e\u3057\u305f\u3002
+##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=\u30ed\u30fc\u30ab\u30eb\u306e\u5bfe\u8c61\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
+##wizard.syncpcspanel.setup=Setup a new mirror
+##wizard.syncpcspanel.takepart=Take part in a mirror
+##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
@@ -932,4 +953,5 @@ wizard.whattodo.bordertext=\u4f5c\u696d\u9078\u629e
 wizard.whattodo.filesharing=\u30d5\u30a1\u30a4\u30eb\u306e\u5171\u6709
 wizard.whattodo.openonlinedocumentation=\u30aa\u30f3\u30e9\u30a4\u30f3\u8aac\u660e\u3092\u958b\u304f
 wizard.whattodo.projectwork=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f
+##wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=\u4f55\u3092\u884c\u3044\u307e\u3059\u304b\uff1f
